--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "sqlite3": "^5.1.7",
     "zod": "^3.22.4"
